<resources>
    <string name="app_name">Body calculator</string>
    <string name="HelloString">Онлайн калькулятор функционального
        состояния и индекса массы тела</string>
    <string name="_8_indicators">8 показателей</string>
    <string name="bmi">BMI</string>
    <string name="next">Продолжить</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="selectIndex">выбрать индекс</string>
    <string name="statistic">статистика</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="result">Результат</string>
    <string name="results">Результаты</string>
    <string name="home">дом</string>
    <string name="indicate">Укажите</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="body_mass_index">Индекс массы тела</string>
    <string name="kerdo">Вегетативный индекс Кердо </string>
    <string name="level_of_physical_activity">Уровень двигательной активности</string>
    <string name="title_1_body_mass_index">Индекс оценивает степень соответсвия массы тела
        человека и роста, в результате определения индекса можно косвенно судить о норме,
        недостатка или избыточная масса тела  </string>
    <string name="define">Определить</string>
    <string name="body_mass_rec">Рекоммендации: \n-при индексе свыше 25 кг/м2 необходимо подключить
        онлайн-калькулятор питания и контролировать полученные калории, увеличить
        прогулки на свежем воздухе, ограничить хлебобулочные изделия\n
        \n-средние значения индекса, полученные в РЭУ им. Г.В. Плеханова составили
        у девушек – 19-23 кг/м2, у юношей 20-23 кг/м2\n
        \n-у представителей молодого возраста (до 30 лет) индекс массы тела
        ниже по сравнению с представителями среднего возраста

    </string>

    <string name="endurance_coefficient_rec">Рекоммендации: \n-при занятиях спортом коэффициент
        выносливости может быть ниже 16 усл.ед., из-за укрепления
        сердечно-сосудистой системы, коэффициент выносливости коррелирует с уровнем физической
        работоспособности организма\n
        \n-для улучшения коэффициента выносливости сердечно-сосудистой системы следует заниматься
        ФКиС не менее трех раз в неделю, совершать 10-12,5 тысяч шагов в сутки

    </string>


    <string name="endurance_coefficient">Коэффициент выносливости</string>
    <string name="title_1_endurance_coefficient">характеризует функциональное состояние
        сердечно-сосудистой системы\n(ЧСС) Частота сердечных
        сокращений\n(САД) систолическое артериальное давление\n(ДАД) – диастолическое
        артериальное давление\n(ПД) – пульсовое давление
    </string>

    <string name="title_1_regulation_heart">Индекс используется для косвенного определения
        степени обеспеченности миокарда кислородом
        \n(ЧСС) Частота сердечных
        сокращений\n(САД) систолическое артериальное давление
    </string>

    <string name="title_1_life_index">даёт косвенное представление о функциональных
        возможностях системы внешнего дыхания\n(ЖЕЛ) – жизненная емкость легких
        (мл)\n(М) – масса тела (кг). </string>

    <string name="title_1_skibinski">определяет резервы и выносливость дыхательной
        и сердечно-сосудистой систем\n(ЖЕЛ) – жизненная емкость легких (мл) \n(ПШ) – проба
        Штанге (с)\n(ЧСС) – частота сердечных сокращений (уд/мин). </string>

    <string name="title_1_kerdo">оценивает состояние вегетативной нервной системы</string>

    <string name="title_1_change_index">С помощью этого теста оценивают функциональные возможности системы кровообращения</string>


    <string name="regulation_heart_rec">Рекоммендации: \n- результаты индекса на
        студентах РЭУ им. Г.В. Плеханова:
        девушки 90-101 усл. ед., юноши 92,3-96 усл. ед\n
        \n- в процессе регулярных занятий ФКиС значения индекса постепенно снижаются, и могут
        достигать среднего, выше среднего и высокого уровня регуляции сердечно-сосудистой системы
    </string>

    <string name="life_index_rec">Рекоммендации: \n- на увеличение жизненной емкости легких
        влияют регулярные занятия физической культурой и спортом, особенно занятия аэробной
        направленности (бег, велопрогулки, плавание, аэробика, работа на
        кардиотренажерах, спортивные игры и другие)\n
        \n-у лиц, не занимающихся физической культурой и спортом чаще всего,
        жизненная емкость легких ниже по сравнению с лицами регулярно занимающимися ФКиС
    </string>


    <string name="skibinski_rec">Рекоммендации: \n-проба Штанге (с), определяющая
        гипоксическую устойчивость организма (время задержки дыхания на вдохе)\n- индекс
        Скибински характеризует состояние сердечно-сосудистой и дыхательной систем.
    </string>

    <string name="kerdo_rec">Рекоммендации: \nИндекс Кердо в норме равен 0 усл. ед., что
        демонстрирует оптимальный уровень вегетативной регуляции сердечно-сосудистой
        системы\n- при преобладании симпатического тонуса отмечается увеличение\n
        - при преобладании парасимпатического тонуса отмечается снижение индекса. .
    </string>



    <string name="regulation_heart">Уровень регуляции сердечно-сосудистой системы</string>
    <string name="life_index">Жизненный индекс</string>
    <string name="skibinski">Циркулярно-респираторный коэффициент Скибински</string>
    <string name="bodyMass">Масса тела:</string>
    <string name="JEL">ЖЕЛ</string>
    <string name="change_index">Индекс функциональных изменений</string>




</resources>