<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.bodycalculator.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.bodycalculator.ui.select_index.SelectIndexFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_select_index" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.bodycalculator.ui.statistic.StatisticFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_statistic" />

    <fragment
        android:id="@+id/navigation_result"
        android:name="com.example.bodycalculator.ui.result.ResultFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_result" />

</navigation>