<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tabbedFragments.Fragment_body_mass_index">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/beau_regular"
            android:text="@string/body_mass_index"
            android:textSize="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:textSize="17sp"
            android:fontFamily="@font/beau_regular"
            android:text="@string/title_1_body_mass_index"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/edtNumHeight"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:fontFamily="@font/beau_regular"
            android:hint="1.78"
            android:inputType="number"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />


        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:fontFamily="@font/beau_regular"
            android:text="Рост:"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/edtNumHeight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edtNumHeight" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/beau_regular"
            android:text="(М)"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/edtNumHeight"
            app:layout_constraintStart_toEndOf="@+id/edtNumHeight"
            app:layout_constraintTop_toTopOf="@+id/edtNumHeight" />


        <EditText
            android:id="@+id/edtNumBodyMass"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:ems="10"
            android:fontFamily="@font/beau_regular"
            android:hint="67"
            android:inputType="number"
            app:layout_constraintStart_toEndOf="@+id/txtBodyMass"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />


        <TextView
            android:id="@+id/txtBodyMass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:fontFamily="@font/beau_regular"
            android:text="@string/bodyMass"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/edtNumBodyMass"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edtNumBodyMass" />

        <TextView
            android:id="@+id/txtMassKG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/beau_regular"
            android:text="(Кг)"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/edtNumBodyMass"
            app:layout_constraintStart_toEndOf="@+id/edtNumBodyMass"
            app:layout_constraintTop_toTopOf="@+id/edtNumBodyMass" />

        <Button
            android:id="@+id/btn_body_mass_define"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="16dp"
            android:text="@string/define"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtNumBodyMass" />

        <TextView
            android:id="@+id/txt_body_mass_res"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/beau_regular"
            android:text="Резульатат: "
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_body_mass_define" />

        <TextView
            android:id="@+id/txt_body_mass_rec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="16sp"
            android:text="@string/body_mass_rec"
            app:layout_constraintStart_toStartOf="@+id/txt_body_mass_res"
            app:layout_constraintTop_toBottomOf="@+id/txt_body_mass_res" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>